deploys/2.remote/1.0.4-workspace-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-rest-interface
spec:
  selector:
    matchLabels:
      app: workspace-rest-interface
  template:
    metadata:
      labels:
        app: workspace-rest-interface
    spec:
      containers:
        - name: workspace-rest
          image: sprugit/rest-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: workspace-env
---
apiVersion: v1
kind: Service
metadata:
  name: workspace-rest-interface
spec:
  type: ClusterIP
  selector:
    app: workspace-rest-interface
  ports:
    - name: rest-port
      port: 8080
      targetPort: 8080
